publish: feat: add unlimited bep20
generated from commit 8ff1e81713c14e06db28cee9da68eca38cda4988

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:image" content="https://vittominacori.github.io/bep20-generator/assets/images/bep20-token-generator.png">
     
-    <link rel="preload" href="/bep20-generator/assets/css/0.styles.94c9c919.css" as="style"><link rel="preload" href="/bep20-generator/assets/js/app.4f3265d7.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/4.86d72dea.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/9.1df26c39.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/13.5b11919e.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/7.debe9463.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/12.cfca58b5.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/11.8a95aae6.js" as="script"><link rel="prefetch" href="/bep20-generator/assets/js/1.e7a9078f.js"><link rel="prefetch" href="/bep20-generator/assets/js/10.e827b758.js"><link rel="prefetch" href="/bep20-generator/assets/js/14.e1bacb0b.js"><link rel="prefetch" href="/bep20-generator/assets/js/15.01cb2d47.js"><link rel="prefetch" href="/bep20-generator/assets/js/16.8ee644cd.js"><link rel="prefetch" href="/bep20-generator/assets/js/17.aade1fa9.js"><link rel="prefetch" href="/bep20-generator/assets/js/18.94f0f22a.js"><link rel="prefetch" href="/bep20-generator/assets/js/19.60579696.js"><link rel="prefetch" href="/bep20-generator/assets/js/3.3350e0cf.js"><link rel="prefetch" href="/bep20-generator/assets/js/5.c23453cc.js"><link rel="prefetch" href="/bep20-generator/assets/js/6.0ce32b6e.js"><link rel="prefetch" href="/bep20-generator/assets/js/8.7beba0a2.js">
+    <link rel="preload" href="/bep20-generator/assets/css/0.styles.94c9c919.css" as="style"><link rel="preload" href="/bep20-generator/assets/js/app.98c0e52f.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/4.79c2016f.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/9.1df26c39.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/13.92c98f25.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/7.28c06147.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/12.cfca58b5.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/11.5e805216.js" as="script"><link rel="prefetch" href="/bep20-generator/assets/js/1.ab3527be.js"><link rel="prefetch" href="/bep20-generator/assets/js/10.cea1edd3.js"><link rel="prefetch" href="/bep20-generator/assets/js/14.e1bacb0b.js"><link rel="prefetch" href="/bep20-generator/assets/js/15.01cb2d47.js"><link rel="prefetch" href="/bep20-generator/assets/js/16.3ce5ed77.js"><link rel="prefetch" href="/bep20-generator/assets/js/17.aade1fa9.js"><link rel="prefetch" href="/bep20-generator/assets/js/18.0b4cd09b.js"><link rel="prefetch" href="/bep20-generator/assets/js/19.7133282a.js"><link rel="prefetch" href="/bep20-generator/assets/js/3.658acef2.js"><link rel="prefetch" href="/bep20-generator/assets/js/5.1656e8b0.js"><link rel="prefetch" href="/bep20-generator/assets/js/6.5d878952.js"><link rel="prefetch" href="/bep20-generator/assets/js/8.60a0bbea.js">
     <link rel="stylesheet" href="/bep20-generator/assets/css/0.styles.94c9c919.css">
   </head>
   <body>
@@ -54,7 +54,7 @@
                 </p></div><!----><!----></div></div></div> <div class="row"><div class="text-center col-lg-10 offset-lg-1"><a href="/bep20-generator/create-token/" target="_self" class="btn my-5 py-3 px-5 text-uppercase btn-outline-success btn-lg">
                 Get Started
             </a></div></div></div></div></div> <div id="pricing" class="row aqua-gradient mx-0"><div class="py-5 col-lg-12 col-xl-10 offset-xl-1"><h2 class="p-5 font-weight-lighter text-center text-light">Pricing</h2> <div class="pricing-table"><div class="row mb-5"><div class="col-lg-10 offset-lg-1"><h4 class="text-center font-weight-light text-light">
-                Choose between 5 different Token types.
+                Choose between 6 different Token types.
             </h4> <p class="text-center font-weight-light text-light">
                 What are your Token requirements?
             </p></div></div> <!----> <div class="row"><div class="mt-4 col-lg-6 offset-lg-3"><p class="text-center text-light">
@@ -277,7 +277,7 @@
                                     &quot;Gas&quot; is the name for a special unit used in BSC. It measures how much
                                     &quot;work&quot; an action or set of actions takes to perform.<br>
                                     Every operation that can be performed by a transaction or contract on the
-                                    Ethereum platform costs a certain number of gas, with operations that require
+                                    BSC platform costs a certain number of gas, with operations that require
                                     more computational resources costing more gas than operations that require few
                                     computational resources.<br>
                                     The reason gas is important is that it helps to ensure an appropriate fee is
@@ -327,6 +327,6 @@
                         <a href="https://vittominacori.github.io/" rel="noopener" target="_blank" class="text-warning">
                             vittominacori
                         </a></small></div></div></div></div> <!----></div></div><div class="global-ui"></div></div>
-    <script src="/bep20-generator/assets/js/app.4f3265d7.js" defer></script><script src="/bep20-generator/assets/js/4.86d72dea.js" defer></script><script src="/bep20-generator/assets/js/9.1df26c39.js" defer></script><script src="/bep20-generator/assets/js/13.5b11919e.js" defer></script><script src="/bep20-generator/assets/js/7.debe9463.js" defer></script><script src="/bep20-generator/assets/js/12.cfca58b5.js" defer></script><script src="/bep20-generator/assets/js/11.8a95aae6.js" defer></script>
+    <script src="/bep20-generator/assets/js/app.98c0e52f.js" defer></script><script src="/bep20-generator/assets/js/4.79c2016f.js" defer></script><script src="/bep20-generator/assets/js/9.1df26c39.js" defer></script><script src="/bep20-generator/assets/js/13.92c98f25.js" defer></script><script src="/bep20-generator/assets/js/7.28c06147.js" defer></script><script src="/bep20-generator/assets/js/12.cfca58b5.js" defer></script><script src="/bep20-generator/assets/js/11.5e805216.js" defer></script>
   </body>
 </html>
